<resources>
    <string name="app_name">BogApp</string>
    <string name="login_activity_username_hint">მომხმარებელი</string>
    <string name="login_activity_password_hint">პაროლი</string>
    <string name="login_activity_login_button_text">შესვლა</string>
    <string name="login_activity_unable_login">მომხმარებლის სახელი ან პაროლი ვერ მოიძებნა</string>
    <string name="login_activity_activity_login_username_password_empty">მომხმარებლის სახელი და პაროლი არ უნდა იყოს ცარიელი</string>
    <string name="login_activity_activity_login_username_empty">მომხმარებლის სახელი არ უნდა იყოს ცარიელი</string>
    <string name="login_activity_activity_login_password_empty">პაროლი არ უნდა იყოს ცარიელი</string>
    <string name="login_activity_activity_login_username_password_short">მომხმარებლის სახელი და პაროლი არ უნდა იყოს 3 სიმბოლოზე ნაკლები</string>
    <string name="login_activity_activity_login_username_short">მომხმარებლის სახელი არ უნდა იყოს 3 სიმბოლოზე ნაკლები</string>
    <string name="login_activity_activity_login_password_short">პაროლი არ უნდა იყოს 3 სიმბოლოზე ნაკლები</string>
    <string name="login_activity_activity_login_username_empty_password_short">მომხმარებლის სახელი არ უნდა იყოს ცარიელი, ხოლო პაროლი 3 სიმბოლოზე ნაკლები</string>
    <string name="login_activity_activity_login_username_short_password_empty">მომხმარებლის სახელი არ უნდა იყოს 3 სიმბოლოზე ნაკლები, ხოლო პაროლი ცარიელი</string>

    <string name="page_title_profile">პროფილი</string>
    <string name="page_title_actives">აქტივები</string>
    <string name="page_title_transactions">გადახდების ისტორია</string>
    <string name="page_title_cards">ბარათები</string>
    <string name="fragment_profile_title_first_name">სახელი</string>
    <string name="fragment_profile_title_last_name">გვარი</string>
    <string name="fragment_profile_title_gender">სქესი</string>
    <string name="fragment_profile_title_birthday">დაბადების თარიღი</string>
    <string name="fragment_profile_title_category">კლიენტის კატეგორია</string>
    <string name="fragment_profile_text_phone">ტელეფონი</string>
    <string name="fragment_profile_text_address">მისამართი</string>
    <string name="fragment_profile_text_mail">ელ-ფოსტა</string>
    <string name="fragment_actives_cell_points_order_no_title">ნომერი:</string>
    <string name="fragment_transactions_recycler_income_title">შემოსავალი</string>
    <string name="fragment_transactions_recycler_outcome_title">გასავალი</string>
    <string name="fragment_transaction_cell_entry_ccy">ლარი</string>
    <string name="fragment_transaction_cell_entry_day_today">დღეს</string>
    <string name="fragment_transaction_cell_entry_day_yesterday">გუშინ</string>
    <string name="fragment_card_cell_valid_title">valid thru</string>
    <string name="fragment_card_cell_type_solo">solo</string>
    <string name="fragment_card_cell_type_green">green</string>
    <string name="fragment_card_cell_type_gold">gold</string>

</resources>
